Save transactions in database and make portfolio API more consistent
